--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/leaflet": "^1.9.9",
+    "@types/react-leaflet": "^3.0.0",
+    "axios": "^1.6.8",
+    "classnames": "^2.5.1",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "node-geolocation": "^1.15.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
